settings: Remove fixed aspect ratio when cropping realm logo.
Previously the aspect ratio of crop box was fixed to 8:1
for realm logo. Now we remove the fixed aspect ratio and user
can freely adjust the crop box. This makes sense given how
we show the logo in the UI if it is not with 8:1 aspect ratio.

--- a/web/styles/image_upload_widget.css
+++ b/web/styles/image_upload_widget.css
@@ -10,6 +10,7 @@
 
     .image-block {
         background-size: contain;
+        max-height: 100%;
     }
 
     .image-hover-background {
